# last_order_logic

./: Cargo.toml  README.md
assets/: help.txt  syntax.txt
assets/help/: all.txt  any.txt  app.txt  bool.txt  help.txt  lambda.txt  lift.txt  path.txt  type.txt
examples/: lol_repl.rs  lolz.rs
source/: geom.lol.md  geom.lol.txt
source/geom-theorems/: all-lines-form-squares.lol.txt
src/: lib.rs  parsing.rs  runtime.rs
