[package]
name = "last_order_logic"
version = "0.2.0"
edition = "2018"
authors = [
  "bvssvni <bvssvni@gmail.com>"
]
keywords = ["lol", "logic", "theorem", "proving", "advancedresearch"]
description = "An experimental logical language"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/last_order_logic.git"
homepage = "https://github.com/advancedresearch/last_order_logic"
documentation = "https://docs.rs/last_order_logic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_meta = "2.0.1"
